@@ -1,6 +1,7 @@
 This file documents the revision history for mod_gearman.
 
 1.3.6 not yet released
+          - allow gearman_top to display multiple servers (Thomas Dohl)
           - fixed typo in 'timeout_return' docs
 
 1.3.4 Tue Jun 19 14:58:14 CEST 2012
